==> peoblouk/Merici_stanice_PROJECT/program/security_system/lib/RFID_RC522/src/RC522.c <==
#include "RC522.h"

void RC522_Init(void)
{
    /* Enable SPI clock */
    CLK_PeripheralClockConfig(CLK_PERIPHERAL_SPI, ENABLE);

    /* Set the MOSI,MISO and SCK at high level */
    GPIO_ExternalPullUpConfig(SPI_PORT, (GPIO_Pin_TypeDef)(SPI_MISO | SPI_MOSI | SPI_SCK), ENABLE);

    /* SD_SPI Configuration */
    SPI_Init(SPI_FIRSTBIT_MSB, SPI_BAUDRATEPRESCALER_4, SPI_MODE_MASTER,
             SPI_CLOCKPOLARITY_HIGH, SPI_CLOCKPHASE_2EDGE, SPI_DATADIRECTION_2LINES_FULLDUPLEX,
             SPI_NSS_SOFT, 0x07);

    /* SD_SPI enable */
    SPI_Cmd(ENABLE);

    /* Set MSD ChipSelect pin in Output push-pull high level */
    GPIO_Init(CHIP_SELECT_PORT, CHIP_SELECT_PIN, GPIO_MODE_OUT_PP_HIGH_SLOW);
    GPIO_WriteHigh(CHIP_SELECT_PORT, CHIP_SELECT_PIN); // CS
    // RST
    GPIO_Init(SPI_PORT, SPI_RST, GPIO_MODE_OUT_PP_HIGH_SLOW); // RST
    GPIO_WriteHigh(SPI_PORT, SPI_RST);
}

char PcdReset(void)
{
    // MF522_RST=1;
    MF522_RST_H;
    nop();
    // MF522_RST=0;
    MF522_RST_L;
    nop();
    // MF522_RST=1;
    MF522_RST_H;
    nop();
    WriteRawRC(CommandReg, PCD_RESETPHASE);
    nop();

    WriteRawRC(TModeReg, 0x80);      // TAuto=1; timer starts automatically at the end of the transmission in all communication modes at all speeds
    WriteRawRC(TPrescalerReg, 0xA9); // TPreScaler = TModeReg[3..0]:TPrescalerReg, ie 0x0A9 = 169 => f_timer=40kHz, ie a timer period of 25?s.
    WriteRawRC(TReloadRegH, 0x03);   // Reload timer with 0x3E8 = 1000, ie 25ms before timeout.
    WriteRawRC(TReloadRegL, 0xE8);

    WriteRawRC(TxAutoReg, 0x40); // Default 0x00. Force a 100 % ASK modulation independent of the ModGsPReg register setting
    WriteRawRC(ModeReg, 0x3D);   // Default 0x3F. Set the preset value for the CRC coprocessor for the CalcCRC command to 0x6363 (ISO 14443-3 part 6.2.4)
    PcdAntennaOn();              // Enable the antenna driver pins TX1 and TX2
    return MI_OK;
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    unsigned char i, ucAddr, temp;

    //    MF522_SCK_L;
    GPIO_WriteLow(CHIP_SELECT_PORT, CHIP_SELECT_PIN);
    ucAddr = ((Address << 1) & 0x7E);

    SPI->DR = ucAddr;

    while ((SPI->SR & SPI_SR_TXE) == 0)
    {
        /* Wait while the byte is transmitted */
    }
    ///
    while (SPI_GetFlagStatus(SPI_FLAG_RXNE) == RESET)
    {
    }
    /* Store the received byte in the RxBuffer2 */
    temp = SPI->DR;

    SPI->DR = value;

    while ((SPI->SR & SPI_SR_TXE) == 0)
    {
        /* Wait while the byte is transmitted */
    }
    ///
    while (SPI_GetFlagStatus(SPI_FLAG_RXNE) == RESET)
    {
    }
    /* Store the received byte in the RxBuffer2 */
    temp = SPI->DR;
    GPIO_WriteHigh(CHIP_SELECT_PORT, CHIP_SELECT_PIN);
    //    MF522_SCK_H;
}

unsigned char ReadRawRC(unsigned char Address)
{
    unsigned char i, ucAddr;
    unsigned char ucResult = 0;

    //     MF522_SCK_L;
    GPIO_WriteLow(CHIP_SELECT_PORT, CHIP_SELECT_PIN);
    ucAddr = ((Address << 1) & 0x7E) | 0x80;

    SPI->DR = ucAddr;

    while ((SPI->SR & SPI_SR_TXE) == 0)
    {
        /* Wait while the byte is transmitted */
    }
    ///
    while (SPI_GetFlagStatus(SPI_FLAG_RXNE) == RESET)
    {
    }
    /* Store the received byte in the RxBuffer2 */
    temp = SPI->DR;

    SPI->DR = 0x00;

    while ((SPI->SR & SPI_SR_TXE) == 0)
    {
        /* Wait while the byte is transmitted */
    }
    /* Wait the byte is entirely received by SPI */
    while (SPI_GetFlagStatus(SPI_FLAG_RXNE) == RESET)
    {
    }
    /* Store the received byte in the RxBuffer2 */
    ucResult = SPI->DR;
    GPIO_WriteHigh(CHIP_SELECT_PORT, CHIP_SELECT_PIN);
    // MF522_SCK_H;
    return ucResult;
}
